Add eslint as code linter.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "storybook": "start-storybook -p 6006",
     "deploy-storybook": "storybook-to-ghpages",
     "build-storybook": "build-storybook -c .storybook -o .out",
-    "prepublish": "npm run build"
+    "precommit": "npm lint",
+    "prepush": "npm lint",
   },
   "repository": {
     "type": "git",
@@ -37,7 +38,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "prop-types": "^15.6.0",
+    "husky": "^0.14.3",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-media": "^1.6.1",
@@ -48,5 +49,7 @@
     "react-dom": "^16.0.0",
     "styled-components": "^2.2.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "prop-types": "^15.6.0"
+  }
 }
