--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "build": "NODE_ENV=production babel src --presets es2015,react --out-dir lib",
     "storybook": "start-storybook -p 6006",
     "deploy-storybook": "storybook-to-ghpages",
-    "build-storybook": "build-storybook -c .storybook -o .out",
-    "precommit": "npm lint",
-    "prepush": "npm lint",
+    "lint": "eslint ./src",
+    "precommit": "yarn lint",
+    "prepush": "yarn lint",
+    "build-storybook": "build-storybook -c .storybook -o .out"
   },
   "repository": {
     "type": "git",
@@ -36,8 +37,14 @@
     "@storybook/react": "^3.2.13",
     "@storybook/storybook-deployer": "^2.0.0",
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.0.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "eslint": "^4.10.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "husky": "^0.14.3",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
