--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A collection of progressive loading effect with react.",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf lib && rm -rf node_modules",
+    "test": "jest --coverage",
+    "test:watch": "yarn test -- --watch",
     "build": "NODE_ENV=production babel src --out-dir lib",
     "storybook": "start-storybook -p 6006",
     "deploy-storybook": "storybook-to-ghpages",
@@ -38,6 +39,7 @@
     "@storybook/storybook-deployer": "^2.0.0",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.0.1",
+    "babel-jest": "^21.2.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.10.0",
@@ -46,6 +48,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "husky": "^0.14.3",
+    "jest": "^21.2.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-media": "^1.6.1",
