--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
     "parser": "babel-eslint",
     "extends": "airbnb",
     "plugins": [
-        "react"
+        "react",
+        "jest"
     ],
     "rules": {
         // comma
@@ -45,6 +46,12 @@
         "react/no-danger": 0,
         "react/no-string-refs": 0,
         "react/no-did-mount-set-state": 0,
+
+        // jest
+        "jest/no-disabled-tests": "warn",
+        "jest/no-focused-tests": "error",
+        "jest/no-identical-title": "error",
+        "jest/valid-expect": "error",
 
         // div could have event listener
         "jsx-a11y/no-static-element-interactions": 0,
